Change getFist(), getLast() to get()